--- a/package.json
+++ b/package.json
@@ -1,23 +1,51 @@
 {
-  "name": "hostaway-sample",
+  "name": "sample-app",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "lint": "eslint ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "^6.6.0",
+    "@react-navigation/stack": "^6.4.0",
+    "@reduxjs/toolkit": "^2.2.6",
+    "@shopify/flash-list": "1.6.4",
+    "@tanstack/react-query": "^4.26.1",
+    "axios": "^1.7.2",
     "expo": "~51.0.18",
+    "expo-localization": "~15.0.3",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
+    "i18n-js": "^4.4.3",
+    "i18next": "^23.11.5",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-hook-form": "^7.52.1",
+    "react-i18next": "^14.1.2",
+    "react-native": "0.74.3",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "yup": "^1.4.0",
+    "expo-image": "~1.12.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "^7.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.3.2",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
